@@ -1,3 +1,6 @@
+2010-07-02 Ivan Kartolo <ivan.kartolo@dkd.de>
+	* Bug #6744: wrong statistics counter
+
 2010-06-28 Ivan Kartolo <ivan.kartolo@dkd.de>
 	* Importer: allow empty field
 	* tablename typo in TCA
